# Copyright (c) 2015 Thomas Heller
# Copyright (c) 2015 Dominic Marcello
# Copyright (c) 2018-2019 Parsa Amini
#
# Distributed under the Boost Software License, Version 1.0. (See accompanying
# file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

cmake_minimum_required(VERSION 3.12.4)
cmake_policy(VERSION 3.12.4)

# Libraries linked via full path no longer produce linker search paths.
cmake_policy(SET CMP0003 NEW)
cmake_policy(SET CMP0074 NEW)

project(cosmictiger CXX C)

# Search path for CMake modules to be loaded by include() and find_package()
list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")

find_package(HPX REQUIRED NO_CMAKE_PACKAGE_REGISTRY)
find_package(Silo REQUIRED)
find_package(Boost REQUIRED)
enable_language(CUDA)

set(CMAKE_CXX_FLAGS "-g -ffast-math -march=native")

set(cosmictiger_source_files
	src/bucket.cpp
	src/hpx.cpp
	src/main.cpp
	src/options.cpp
	src/rand.cpp
	src/range.cpp
	src/tree.cpp
	src/tree_client.cpp
	src/tree_dir.cpp
)


set(cosmictiger_header_files
	cosmictiger/bucket.hpp
	cosmictiger/cuda_export.hpp
	cosmictiger/defs.hpp
	cosmictiger/hpx.hpp
	cosmictiger/options.hpp
	cosmictiger/particle.hpp
	cosmictiger/position.hpp
	cosmictiger/rand.hpp
	cosmictiger/range.hpp
	cosmictiger/timer.hpp
	cosmictiger/tree.hpp
	cosmictiger/tree_dir.hpp
	cosmictiger/tree_client.hpp
	cosmictiger/tree_mems.hpp
	cosmictiger/util.hpp
	cosmictiger/vect.hpp
)


add_hpx_executable(
  cosmictiger
  DEPENDENCIES
    Silo::silo Boost::boost
  SOURCES
    ${cosmictiger_source_files}
  HEADERS
    ${cosmictiger_header_files}
 )



target_include_directories(cosmictiger PUBLIC ${PROJECT_SOURCE_DIR})
target_compile_options(cosmictiger PUBLIC "-DUSE_HPX")
target_compile_options(cosmictiger PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
                       --gpu-architecture=compute_75;
                        >)

